Footer spacing and order correction, tedxline font changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,7 +229,8 @@ nav {
 .footerContainer1 {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
+  margin-bottom:30px;
 }
 
 hr {
@@ -245,7 +246,7 @@ hr {
 }
 
 .footerContainer1>div:nth-child(2) {
-  margin-left: 300px;
+  /* margin-left: 300px; */
 }
 
 @media only screen and (max-width: 500px) {
@@ -259,7 +260,7 @@ hr {
     flex-direction: column;
   }
   .footerContainer1>div:nth-child(2) {
-    margin-top: 40px;
+    margin-top: 20px;
     margin-left:0px;
   }
   .footerContainer2 {
@@ -644,7 +645,6 @@ a {
 
 
 .quickLinksList {
-  margin-bottom: 20px;
   list-style-type: none;
   color: #b3b3b3;
   margin-left: -10px;
@@ -679,7 +679,6 @@ a {
 }
 
 .tedxLine {
-  color: #e62b1e;
-  font-weight:600;
-  font-size:0.9em
+  color: #e69690;
+  font-size:0.8em;
 }
